--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,4 +15,7 @@
             <div class="badge bg-danger">{{totaitemNumber}}</div>
         </button>
     </div>
+    <div>
+        <button (click)="logOut()" class="btn btn-outline-primary" style="float: right;margin: 5px;">Log Out</button>
+    </div>
 </header>
