--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -28,6 +28,7 @@
                     </div>
                     <button style="margin-top: 15px;" type="submit" class="btn btn-primary">Login</button>
                   </form>
+                  <a routerLink="/login" href="">Have an Account? Login In</a>
             </div>
         </div>
     </div>
