--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,18 +6,19 @@
                     <h1>Shop Mart Login</h1>
                     <h5>Login Here</h5><hr>
                 </div>
-                <form>
-                    <div class="form-group">
+                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                    <div class="form-group"> 
                       <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                      <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                       <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                     <div class="form-group">
                       <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                      <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <button style="margin-top: 15px;" type="submit" class="btn btn-primary">Login</button>
                   </form>
+                  <a routerLink="/signup" href="">New user? Sign Up</a>
             </div>
         </div>
     </div>
