--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <div class="navbar navbar-dark bg-primary shadow-sm">
         <div class="navbar-brand align-item-center d-flex">
-       
-            <i style="font-size: 35px;" class='fas fa-shipping-fast'></i>
+            <img style="width: 50px;margin-left: 10px;margin-right: 10px;cursor: pointer;" routerLink="/products" src="https://media.istockphoto.com/vectors/colorful-shopping-bags-logo-design-vector-vector-id1254737904?b=1&k=20&m=1254737904&s=612x612&w=0&h=hcZyYkeBcDllIrUKwjrXe0mfBYCGggeR4LliaXQdtLE=" alt="">
+            <!-- <i  class='fas fa-shipping-fast'></i> -->
             <strong style="font-size: 30px; cursor: pointer;" routerLink="/products">Shop Mart</strong>
        
             <!-- <div class="form-group">
