--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -15,3 +15,9 @@ form{
 form input{
     margin-top: 10px;
 }
+.form-control.ng-touched.ng-invalid{
+    border: 1px solid red;
+}
+.form-control.ng-touched.ng-valid{
+    border: 1px solid green;
+}
