--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,13 +12,21 @@
                       <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                       <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
+                    <div>
+                      <span class="text-danger" *ngIf="form.controls['email']?.hasError('email') && form.controls['email'].touched">Enter Proper Email</span>
+                      <span class="text-danger" *ngIf="form.controls['email']?.hasError('required') && form.controls['email'].touched">Email is Required</span> 
+                  </div>
                     <div class="form-group">
                       <label for="exampleInputPassword1">Password</label>
                       <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
+                    <div>
+                      <span class="text-danger" *ngIf="form.controls['password']?.hasError('minlength') && form.controls['password'].touched">Password Should be more than 6 characters</span>
+                      <span class="text-danger" *ngIf="form.controls['password']?.hasError('required') && form.controls['password'].touched">Password is Required</span> 
+                  </div>
                     <button style="margin-top: 15px;" type="submit" class="btn btn-primary">Login</button>
                   </form>
-                  <a routerLink="/signup" href="">New user? Sign Up</a>
+                  <!-- <a routerLink="/signup" href="">New user? Sign Up</a> -->
             </div>
         </div>
     </div>
