--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -47,7 +47,7 @@
     <div class="center">
         <img src="https://cdni.iconscout.com/illustration/free/thumb/empty-cart-4085814-3385483.png" alt="">
         <h5>Your Cart is Empty!</h5>
-        <h6>add item your cart</h6>
+        <h6>Add item to your cart</h6>
         <button routerLink="/products" class="btn btn-primary">Shop Now</button>
     </div>
 </div>
