--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="navbar navbar-dark bg-primary shadow-sm">
+    <div class="navbar navbar-dark  shadow-sm">
         <div class="navbar-brand align-item-center d-flex">
             <img style="width: 50px;margin-left: 10px;margin-right: 10px;cursor: pointer;" routerLink="/products" src="https://media.istockphoto.com/vectors/colorful-shopping-bags-logo-design-vector-vector-id1254737904?b=1&k=20&m=1254737904&s=612x612&w=0&h=hcZyYkeBcDllIrUKwjrXe0mfBYCGggeR4LliaXQdtLE=" alt="">
             <!-- <i  class='fas fa-shipping-fast'></i> -->
@@ -10,8 +10,8 @@
             </div>
             <button class="btn btn-primary">Search</button> -->
         </div>
-        <button routerLink="cart" class="btn btn-primary">
-            <i style="font-size: 30px;" class="fas fa-cart-plus"></i>
+        <button routerLink="cart" class="btn navbar">
+            <i style="font-size: 30px; color: white;" class="fas fa-cart-plus"></i>
             <div class="badge bg-danger">{{totaitemNumber}}</div>
         </button>
     </div>
