--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -21,7 +21,7 @@
                             <td>{{item.title}}</td>
                             <td><img src="{{item.image}}" style="width: 120px;" alt=""></td>
                             <td>{{item.description}}</td>
-                            <td>{{item.price}}</td>
+                            <td>{{item.price | currency}}</td>
                             <td>{{item.quantity}}</td>
                             <td>{{item.total}}</td>
                             <td><button (click)="removeProduct(item)" class="btn btn-danger"><i class="fas fa-trash"></i></button></td>
