--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
     <div class="navbar navbar-dark  shadow-sm">
-        <div class="navbar-brand align-item-center d-flex">
-            <img style="width: 50px;margin-left: 10px;margin-right: 10px;cursor: pointer;" routerLink="/products" src="https://media.istockphoto.com/vectors/colorful-shopping-bags-logo-design-vector-vector-id1254737904?b=1&k=20&m=1254737904&s=612x612&w=0&h=hcZyYkeBcDllIrUKwjrXe0mfBYCGggeR4LliaXQdtLE=" alt="">
+        <div class="navbar-brand align-item-center d-flex align-items-center">
+            <img style="width: 50px;margin-left: 10px;margin-right: 10px;cursor: pointer;" routerLink="/products" src="https://cdn.pixabay.com/photo/2020/01/10/12/49/milk-4755234_640.jpg" alt="">
             <!-- <i  class='fas fa-shipping-fast'></i> -->
-            <strong style="font-size: 30px; cursor: pointer;" routerLink="/products">Shop Mart</strong>
+            <strong style="font-size: 30px; cursor: pointer;" routerLink="/products">Duudwale</strong>
        
             <!-- <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search Products" > 
