Made Additional Changes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,57 @@
-<p>footer works!</p>
+<!-- footer.component.html -->
+<footer class="footer bg-light-cream text-dark py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <h5>Shop</h5>
+          <ul class="list-unstyled">
+            <li><a href="/shop/all">All</a></li>
+            <li><a href="/shop/milk">Milk</a></li>
+            <li><a href="/shop/ghee">Ghee</a></li>
+            <li><a href="/shop/curd">Curd</a></li>
+            <li><a href="/shop/paneer">Paneer</a></li>
+            <li><a href="/shop/whole-milk-powder">Whole Milk Powder</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-md-2">
+          <h5>Refer & Earn</h5>
+          <ul class="list-unstyled">
+            <li><a href="/refer-and-earn">Learn More</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-md-2">
+          <h5>Learn</h5>
+          <ul class="list-unstyled">
+            <li><a href="/about-us">About Us</a></li>
+            <li><a href="/our-process">Our Process</a></li>
+            <li><a href="/sustainability">Sustainability</a></li>
+            <li><a href="/tour-the-farm">Tour the Farm</a></li>
+            <li><a href="/faqs">FAQs</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-md-2">
+          <h5>Blog</h5>
+          <ul class="list-unstyled">
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/recipes">Recipes</a></li>
+            <li><a href="/lifestyle">Lifestyle</a></li>
+            <li><a href="/newsroom">Newsroom</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-md-2">
+          <h5>Contact Us</h5>
+          <ul class="list-unstyled">
+            <li><a href="/contact-us">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <p class="mb-0">&copy; {{ currentYear }} My Angular App. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  
