--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -18,7 +18,7 @@
                     <tbody>
                         <tr *ngFor="let item of products, let i =index">
                             <td>{{i+1}}</td>
-                            <td>{{item.title}}</td>
+                            <td>{{item.name}}</td>
                             <td><img src="{{item.image}}" style="width: 120px;" alt=""></td>
                             <td>{{item.description}}</td>
                             <td>{{item.price | currency}}</td>
